--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 </head>
 <body>
   <iframe
-    src="https://www.youtube-nocookie.com/embed/-bRe5ercRaQ?si=UpztIy8CTY0nfJOj&amp;controls=0&autoplay=1&mute=1"
+    src="https://www.youtube-nocookie.com/embed/-bRe5ercRaQ?si=UpztIy8CTY0nfJOj&amp;controls=0&autoplay=1&mute=1&loop=1"
     title="YouTube video player"
     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
     referrerpolicy="strict-origin-when-cross-origin"
