--- a/trackunit-video.html
+++ b/trackunit-video.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Fullscreen YouTube Embed (Looping)</title>
+  <title>Trackunit Manager & Iris X - Home</title>
   <style>
     html, body {
       margin: 0;
